zod-rs/zod-rs-macros/tests/compile_fail/invalid_rename_all.rs
//! Test that invalid rename_all values produce errors.

use zod_rs_macros::ZodSchema;

#[derive(ZodSchema)]
#[zod(rename_all = "invalid_case")]
struct User {
    name: String,
}

fn main() {}
